--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
                 </div>
             
                 <div class="feature-card">
-                    <form action="/upload" method="POST" class="blog-content">
+                    <form action="/upload" method="POST" class="image-content">
                            <button type="submit" class="cta-btn-upload">Upload</button>
                      </form>
                 </div>
