--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,8 +31,9 @@
                 </div>
             
                 <div class="feature-card">
-                    <form action="/upload" method="POST" class="image-content">
-                           <button type="submit" class="cta-btn-upload">Upload</button>
+                    <form action="/submit" method="POST" class="image-content">
+                        <label for="image_input" class="cta-btn-upload">Upload</label>
+                        <input type="file" id="image_input" name="image_input" style="display: none;">
                      </form>
                 </div>
                 
