--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,8 @@
                 </div>
             
                 <div class="feature-card">
-                    <form action="/submit" method="POST" class="image-content">
+                    <form action="http://localhost:3000/" method="POST" class="image-content">
+                        <img id ="uploaded-modified-image" style="display: none;">
                         <label for="image_input" class="cta-btn-upload">Upload</label>
                         <input type="file" id="image_input" name="image_input" style="display: none;">
                      </form>
@@ -46,5 +47,6 @@
         </section>  
 
     </main>
+    <script src="/js/script.js"></script>
 </body>
 </html>
