fixed uploade button

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,10 +30,10 @@
                     <img src="images/sampleimage.png" alt="No Background">
                 </div>
             
-                <div class="feature-card">
+                <div class="feature-card" id="feature-card-id">
                     <form action="http://localhost:3000/" method="POST" class="image-content">
                         <img id ="uploaded-modified-image" style="display: none;">
-                        <label for="image_input" class="cta-btn-upload">Upload</label>
+                        <label for="image_input" class="cta-btn-upload" id="cta-btn-upload">Upload</label>
                         <input type="file" id="image_input" name="image_input" style="display: none;">
                      </form>
                 </div>
