--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -71,7 +71,7 @@ nav {
     background: #3a3d41;
     font-size: 1.1rem;
     margin-top: 2rem;
-    position: center;
+    /* position: center; */
     color: white;
     text-decoration: none;
     font-family: 'Poppins'; 
@@ -101,7 +101,7 @@ nav {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 2rem;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
 }
 
