--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -69,7 +69,7 @@ nav {
     cursor: pointer;
     font-weight: bold;
     background: #3a3d41;
-    font-size: 1.1rem;
+    font-size: 0.9rem;
     margin-top: 2rem;
     /* position: center; */
     color: white;
@@ -79,6 +79,11 @@ nav {
     align-items: center;
     text-align: center;
     display: flex;
+}
+
+.cta-btn-rmbk{
+    font-size: 0.9rem;
+    width: 150px;
 }
 
 .cta-btn a{
@@ -131,7 +136,8 @@ nav {
 }
 
 .image-content {
-    display: grid;
+    display: flex;
+    gap: 1rem;
     justify-content: center;
     align-items: center;
     height: 100%; /* Adjust as needed */
