--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -117,6 +117,15 @@ nav {
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
+.feature-btn{
+    padding: 2rem;
+    background: white;
+    border-radius: 10px;
+    /* display: grid; */
+    height: 200px;
+    width: 350px;
+}
+
 .feature-nobk {
     padding: 2rem;
     background: white;
@@ -136,19 +145,19 @@ nav {
 }
 
 .image-content {
-    display: flex;
+    display: grid;
     gap: 1rem;
     justify-content: center;
     align-items: center;
     height: 100%; /* Adjust as needed */
 }
 
-#ploaded-modified-image{
+#uploaded-modified-image{
     display: grid;
     justify-content: center;
     align-items: center;
-    height: 80px; /* Adjust as needed */
-    width: 50px; /* Adjust as needed */
+    height: 300px; /* Adjust as needed */
+    width: 300px; /* Adjust as needed */
 }
 
 
@@ -156,5 +165,9 @@ nav {
 @media (max-width: 768px) {
     .hero h1 {
         font-size: 2rem;
+    }
+
+    .feature-bkless{
+        margin-top: 100px;
     }
 }
