made some corrections

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <section id="home" class="hero">
             <h1>Remove Image Background</h1>
             <p>100% Automatically and Free</p>
-            <button class="cta-btn"><a href="#write">Get Started <i class="fa fa-pencil-square-o" aria-hidden="true"></i> </a></button>
+            <button class="cta-btn"><a href="#feat">Get Started Below</a></button>
         </section>
 
         <section class="features" id="feat">
