--- a/Public/style/style.css
+++ b/Public/style/style.css
@@ -160,6 +160,10 @@ nav {
     width: 300px; /* Adjust as needed */
 }
 
+.loading{
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
+}
 
 
 @media (max-width: 768px) {
