added loading timer

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
 
  
                         <% } else { %>
-                            <p class="loading">Loading...</p>
+                            <p id="loading">⏳ Processing Image</p>
                             <img id ="uploaded-modified-image" name="image-given" src= <%= result%> alt="Processing... Please wait!">
 
                         <% } %>
