--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,9 +38,9 @@
                        <input type="file" id="image_inputID" name="image_inputName" style="display: none;">
                                            
                        <!-- Erase backgound button -->
-                       <button type="submit" class="cta-btn-upload cta-btn-rmbk" id="cta-btn-erase" formaction="/erase">Erase BG</button> 
+                       <button type="submit" class="cta-btn-upload cta-btn-rmbk"  formaction="/erase">Erase BG</button> 
 
-                       <button type="submit" class="cta-btn-upload cta-btn-rmbk" id="cta-btn-erase" formaction="/erase">Download</button> 
+                       <button type="submit" class="cta-btn-upload cta-btn-rmbk" id="cta-btn-download" formaction="/erase">Download</button> 
                     </form>
                 </div>
             
