--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,7 +52,7 @@
  
                         <% } else { %>
                             <p id="loading">⏳ Processing Image</p>
-                            <img id ="download-modified-image" name="image-given" src= <%= result %> alt="Process failed! Please try again">
+                            <img id ="download-modified-image" name="image-given" src= <%= result %> alt="Api Request for the month is exhausted">
                             <div id="downloadImage"> </div>
 
                         <% } %>
