API working  now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
                        <!-- Erase backgound button -->
                        <button type="submit" class="cta-btn-upload cta-btn-rmbk"  formaction="/erase">Erase BG</button> 
 
-                       <label class="cta-btn-upload cta-btn-rmbk" id="cta-btn-download" onclick="imageDownload()">Download</label> 
+                       <label class="cta-btn-upload cta-btn-rmbk" id="cta-btn-download" >Download</label> 
                     </form>
                 </div>
             
